; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5212/extr_ar5212_misc.c_ar5212EnableMibCounters.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5212/extr_ar5212_misc.c_ar5212EnableMibCounters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }

@AR_MIBC = common dso_local global i32 0, align 4
@AR_MIBC_COW = common dso_local global i32 0, align 4
@AR_MIBC_FMC = common dso_local global i32 0, align 4
@AR_MIBC_CMC = common dso_local global i32 0, align 4
@AR_MIBC_MCS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ar5212EnableMibCounters(%struct.ath_hal* %0) #0 {
  %2 = alloca %struct.ath_hal*, align 8
  store %struct.ath_hal* %0, %struct.ath_hal** %2, align 8
  %3 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %4 = load i32, i32* @AR_MIBC, align 4
  %5 = load i32, i32* @AR_MIBC_COW, align 4
  %6 = load i32, i32* @AR_MIBC_FMC, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @AR_MIBC_CMC, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @AR_MIBC_MCS, align 4
  %11 = or i32 %9, %10
  %12 = xor i32 %11, -1
  %13 = and i32 %12, 15
  %14 = call i32 @OS_REG_WRITE(%struct.ath_hal* %3, i32 %4, i32 %13)
  ret void
}

declare dso_local i32 @OS_REG_WRITE(%struct.ath_hal*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
